C2D-78 | Fixed text align in basic page body text.

--- a/themes/custom/c2d_theme/css/5.components/components.field.image.css
+++ b/themes/custom/c2d_theme/css/5.components/components.field.image.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+.clearfix:before, .clearfix:after{
+  content:" ";
+  display:table;
+}
+.clearfix:after{
+  clear:both;
+}
 .views-field-field-media-thumbnail:before,
 .views-field-field-image:before{
   content:"";
